--- a/Fake_data.ipynb
+++ b/Fake_data.ipynb
@@ -164,7 +164,7 @@
         "\n",
         "print(f\"Data saved to {csv_file}\")\n",
         "\n",
-        "# Download the CSV file from Colab (optional for user convenience)\n",
+        "# Download the CSV file from Colab,
         "from google.colab import files\n",
         "files.download(csv_file)"
       ]
